--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <div class="menu-toggle">&#9776;</div>
     <a href="index.html"><h1 class="rotate-logo">BHNM</h1></a>
 
-   <div class="search-icon">
+  <div class="search-icon">
     <i class="fas fa-search"></i>
   </div>
 
@@ -28,6 +28,22 @@
       <button class="btn btn-primary" onclick="performSearch()"><i class="fas fa-search"></i></button>
     </div>
   </div>
+
+  <div class="cart-icon" id="cartIcon">
+    🛍️
+    <div class="count" id="cartCount">0</div>
+</div>
+
+<div class="cart-sidebar hidden" id="cartSidebar">
+    <div class="cart-header">
+        <h2>Shopping Cart</h2>
+    </div>
+    <div class="cart-items" id="cartItems"></div>
+    <div class="cart-total">
+        <h4>Total: <span id="cartTotal">0.00€</span></h4>
+    </div>
+    <button id="checkoutBtn" onclick="checkout()">Checkout</button>
+</div>
 
 <div class="sidebar-menu">
     <span class="close-btn">&times;</span>
