--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="menu-toggle" >&#9776;</div>
     <a href="#"><h1 class="rotate-logo">BHNM</h1></a>
 
+    
 
     <div class="search-icon">
     <i class="fas fa-search"></i>
@@ -28,6 +29,21 @@
     </div>
   </div>
 
+   <div class="cart-icon" id="cartIcon">
+    🛍️
+    <div class="count" id="cartCount">0</div>
+</div>
+
+<div class="cart-sidebar hidden" id="cartSidebar">
+    <div class="cart-header">
+        <h2>Shopping Cart</h2>
+    </div>
+    <div class="cart-items" id="cartItems"></div>
+    <div class="cart-total">
+        <h4>Total: <span id="cartTotal">0.00€</span></h4>
+    </div>
+    <button id="checkoutBtn" onclick="checkout()">Checkout</button>
+</div>
 
 <div class="sidebar-menu" >
     <span class="close-btn">&times;</span>
@@ -75,11 +91,11 @@
                 <h6>395.50€</h6>
                 <h5>340.50€</h5>
             </div>
-            <div class="product-card" data-toggle="modal" data-target="#productModal" data-name="Abc Camo Nylon Hooded Jacket" data-price="2,399.50€" data-image="img/bape4.jpg" data-description="Nylon hooded jacket with camo design.">
+            <div class="product-card" data-toggle="modal" data-target="#productModal" data-name="Abc Camo Nylon Hooded Jacket" data-price="915.50€" data-image="img/bape4.jpg" data-description="Nylon hooded jacket with camo design.">
                 <img src="img/bape4.jpg" >
                 <p>Abc Camo Nylon Hooded Jacket</p>
-                <h6>2,699.50€</h6>
-                <h5>2,399.50€</h5>
+                <h6>945.50€</h6>
+                <h5>915.50€</h5>
             </div>
             <div class="product-card" data-toggle="modal" data-target="#productModal" data-name="BHNM STA #1 MENS" data-price="250.00€" data-image="img/bape9.png" data-description="Stylish Suicoke Sandals for men.">
                 <img src="img/bape9.png" >
@@ -161,7 +177,8 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-darker" onclick="addToCart()">Add to Cart</button>
+                <button type="button" class="btn btn-darker" onclick="addToCart()">Add to Shopping Cart</button>
+
             </div>
         </div>
     </div>
