--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 }
 </style>
 <body>
+
+
     <header>
         <nav>
     <div class="menu-toggle" >&#9776;</div>
@@ -173,6 +175,9 @@
   <li><img src="img/lacoste.png" style="max-height:130px;"></li>
   <li><img src="img/stussy.png" style="max-height:130px;"></li>
 </ul>
+
+<hr class="hr" style="border-bottom: 1px solid black; width: 76%;">
+
 
 <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
