--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           <p class="p-products">PRODUCTS</p>
           <h2 class="h2-new">NEW ARRIVALS</h2>
     </section>
+            <hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
+
         <div class="products-grid">
             <div class="product-card" data-toggle="modal" data-target="#productModal" data-name="Abc Camo Shark Full Zip Hoodie" data-price="449.50€" data-image="img/bape1.jpg" data-description="Relaxed fit hoodie with camo design.">
                 <img src="img/bape1.jpg" >
@@ -117,6 +119,7 @@
                 <h5>250.50€</h5>
             </div>
         </div>
+                <hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
 
         <a href="shop.html"><button class="view-all-btn">VIEW ALL</button></a>
     </main>
