--- a/shop.html
+++ b/shop.html
@@ -91,6 +91,7 @@
         </div>
 
         <br>
+        <hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
         <br>
 
         <div class="products-grid">
@@ -117,6 +118,7 @@
         </div>
 
         <br>
+        <hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
         <br>
         
         <div class="products-grid">
@@ -143,6 +145,7 @@
         </div>
 
         <br>
+        <hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
         <br>
 
         <div class="products-grid">
@@ -169,6 +172,7 @@
         </div>
 
         <br>
+        <hr class="hr" style="border-bottom: 1px solid black; width: 100%;">
         <br>
 
         <div class="products-grid">
